# Body2Robot

./: .gitignore  README.md  pyproject.toml
docs/: embodiments.md
scripts/: download_lerobot_dataset.py  view_pico_skeleton.py
src/body2robot/: __init__.py  lerobot_io.py  skeleton.py
src/body2robot/embodiments/: __init__.py
src/body2robot/embodiments/axol/: __init__.py  config.py  shared.py  sim.py  solver.py  trajectory.py
src/body2robot/embodiments/axol/urdf/meshes/: Base.stl  Left_E1.stl  Left_E2.stl  Left_Gripper.stl  Left_S2.stl  Left_S3.stl  Left_W0.stl  Left_W1.stl  Left_W2.stl  Right_E1.stl  Right_E2.stl  Right_Gripper.stl  Right_S2.stl  Right_S3.stl  Right_W0.stl  Right_W1.stl  Right_W2.stl  S1.stl
src/body2robot/retargeting/: __init__.py
src/body2robot/utils/: __init__.py
tests/manual/: README.md  compare_axis_maps_axol.py  replay_pico_arms_on_axol.py
