[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "body2robot"
version = "0.1.0"
description = "Minimal tools for inspecting human body datasets before robot retargeting."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = []

[project.optional-dependencies]
lerobot = [
    "lerobot[dataset]==0.5.1",
]
viewer = [
    "numpy>=1.26",
    "pyvista>=0.43",
]
axol = [
    "jax>=0.9.2",
    "jaxlie>=1.5.0",
    "jaxls",
    "numpy>=2.0",
    "pyroki",
    "viser>=1.0.24",
    "yourdfpy>=0.0.60",
]

[tool.uv.sources]
jaxls = { git = "https://github.com/brentyi/jaxls.git" }
pyroki = { git = "https://github.com/chungmin99/pyroki.git", rev = "388e43e1fc0d0ee382968d3dd72970fd62a0450c" }

[tool.hatch.build.targets.wheel]
packages = ["src/body2robot"]

[tool.hatch.build.targets.wheel.force-include]
"src/body2robot/embodiments/axol/urdf" = "body2robot/embodiments/axol/urdf"
